--- a/checkout.html
+++ b/checkout.html
@@ -14,6 +14,7 @@
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet"
 	media="all">
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/checkout.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/account.css" type="text/css" rel="stylesheet"
 	media="all">
 <link href="css/UserInfo.css" type="text/css" rel="stylesheet"
@@ -166,7 +167,7 @@
 				});
 			</script>
 			<div class="cart-header" id="cart-header0" style="visibility: visible;">
-				<div class="close1"></div>
+				<div class="close1"><div id="close11" style="height: 28px;"></div></div>
 				<div class="cart-sec simpleCart_shelfItem">
 					<div class="cart-item cyc">
 						<img src="images/m1.png" class="img-responsive" alt="" id="cover0">
@@ -175,9 +176,12 @@
 						<h3>
 							<a href="#" id="bname0">书名</a><span style="font-size: 0.55em; margin-left: 10px;" id="author0">作者：</span>
 						</h3>
-						<ul class="qty">
-							<li><p id="counter0">购买数量</p></li>
+						<ul class="ulcheck qty">
+							<li><p >购买数量</p></li>
+							<li><input min="1" type="number"  style="width:70px;" id="counter0" name="quantity" value="1" class="form-control input-small" onchange="change(this)"></li>
 							<li><p>免运费</p></li>
+							<li><a style="visibility: hidden;" id="price0"></a></li>
+							<li><a style="visibility: hidden;" id="bid0"></a></li>
 						</ul>
 						<div class="delivery">
 							<p>确认购买</p>
@@ -199,7 +203,7 @@
 				});
 			</script>
 			<div class="cart-header2" id="cart-header1" style="visibility: visible;">
-				<div class="close2"></div>
+				<div class="close2" ><div id="close22" style="height: 28px;"></div></div>
 				<div class="cart-sec simpleCart_shelfItem">
 					<div class="cart-item cyc">
 						<img src="images/m2.png" class="img-responsive" alt="" id="cover1">
@@ -208,9 +212,12 @@
 						<h3>
 							<a href="#" id="bname1">书名</a><span style="font-size: 0.55em; margin-left: 10px;" id="author1">作者：</span>
 						</h3>
-						<ul class="qty">
-							<li><p id="counter1">购买数量</p></li>
+						<ul class="ulcheck qty">
+							<li><p >购买数量</p></li>
+							<li><input min="1" type="number"  style="width:70px;" id="counter1" name="quantity" value="1" class="form-control input-small"></li>
 							<li><p>免运费</p></li>
+							<li><a style="visibility: hidden;" id="price1"></a></li>
+							<li><a style="visibility: hidden;" id="bid1"></a></li>
 						</ul>
 						<div class="delivery">
 							<p>确认购买</p>
@@ -232,7 +239,7 @@
 				});
 			</script>
 			<div class="cart-header3" id="cart-header2" style="visibility: visible;">
-				<div class="close3"></div>
+				<div class="close3"><div id="close33" style="height: 28px;"></div></div>
 				<div class="cart-sec simpleCart_shelfItem">
 					<div class="cart-item cyc">
 						<img src="images/m3.png" class="img-responsive" alt="" id="cover2">
@@ -241,9 +248,13 @@
 						<h3>
 							<a href="#" id="bname2">书名</a><span style="font-size: 0.55em; margin-left: 10px;" id="author2">作者：</span>
 						</h3>
-						<ul class="qty">
-							<li><p id="counter2">购买数量</p></li>
+						<ul class="ulcheck qty">
+							<li><p >购买数量</p></li>
+							<li><input min="1" type="number"  style="width:70px;" id="counter2" name="quantity" value="1" class="form-control input-small"></li>
 							<li><p>免运费</p></li>
+							<li><a style="visibility: hidden;" id="price2"></a></li>
+							<li><a style="visibility: hidden;" id="bid2"></a></li>
+							
 						</ul>
 						<div class="delivery">
 							<p>确认购买</p>
@@ -263,7 +274,7 @@
 		<table style="margin-right:30px;;margin-bottom: 30px;float: right;">
 			<tr>
 			<td style="text-align: center;">
-				<a href="#" class="btnCheckout btn-block" style="width: 150px;" onclick="updateUserInfo()">结算</a>					
+				<a href="#" class="btnCheckout btn-block" style="width: 150px;" onclick="check()">结算</a>					
 			 </td>
 			</tr>
 		</table>
@@ -313,7 +324,8 @@
 		</div>
 	</div>
 </body>
-<script type="text/javascript" src="js/checkout.js"></script>
 <script type="text/javascript" src="js/Login.js"></script>
+<script type="text/javascript" src="js/checkout.js"></script>
+
 <script type="text/javascript" src="js/Logout.js"></script>
 </html>
