--- a/books.html
+++ b/books.html
@@ -176,7 +176,7 @@ function hideURLbar() {
 							<h4 id="bookName1">Product #2</h4>
 							<span id="price1" class="item_price">$2000.00</span> 
 							<p class="item_quantity" id="counter1"></p> <input type="button"
-								class="item_add items" value="添加到购物车">
+								class="item_add items" value="添加到购物车" onclick="addcartBooks(this)">
 							<div class="clearfix"></div>
 						</div>
 					</div>
@@ -200,7 +200,7 @@ function hideURLbar() {
 							<h4 id="bookName2">Product #3</h4>
 							<span id="price2" class="item_price">$2000.00</span> 
 							<p class="item_quantity"id="counter2"></p> <input type="button"
-								class="item_add items" value="添加到购物车">
+								class="item_add items" value="添加到购物车" onclick="addcartBooks(this)">
 							<div class="clearfix"></div>
 						</div>
 					</div>
@@ -224,7 +224,7 @@ function hideURLbar() {
 							<h4 id="bookName3">Product #4</h4>
 							<span id="price3" class="item_price">$2000.00</span> 
 							<p class="item_quantity" id="counter3"></p> <input type="button"
-								class="item_add items" value="添加到购物车">
+								class="item_add items" value="添加到购物车" onclick="addcartBooks(this)">
 							<div class="clearfix"></div>
 						</div>
 					</div>
@@ -249,7 +249,7 @@ function hideURLbar() {
 							<span id="price4" class="item_price">$2000.00</span> 
 							<p class="item_quantity" id="counter4"></p> 
 							<input type="button"
-								class="item_add items" value="添加到购物车">
+								class="item_add items" value="添加到购物车" onclick="addcartBooks(this)">
 							<div class="clearfix"></div>
 						</div>
 					</div>
@@ -273,7 +273,7 @@ function hideURLbar() {
 							<h4 id="bookName5">Product #6</h4>
 							<span id="price5" class="item_price">$2000.00</span> 
 							<p class="item_quantity" id="counter5"></p> <input type="button"
-								class="item_add items" value="添加到购物车">
+								class="item_add items" value="添加到购物车" onclick="addcartBooks(this)">
 							<div class="clearfix"></div>
 						</div>
 					</div>
@@ -949,7 +949,7 @@ function hideURLbar() {
 <script type="text/javascript" src="js/Login.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
 <script type="text/javascript" src="js/books.js"></script>
-<script type="text/javascript" src="js/addcart.js"></script>
+
 <script type="text/javascript" src="js/SearchByType.js"></script>
 
 </html>
