--- a/checkout.html
+++ b/checkout.html
@@ -18,6 +18,27 @@
 	media="all">
 <link href="css/UserInfo.css" type="text/css" rel="stylesheet"
 	media="all">
+<link rel="stylesheet" href="css/flexslider.css" type="text/css"
+	media="screen" />
+	<link href="css/bootstrap.css" type="text/css" rel="stylesheet"
+	media="all">
+<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/account.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/bootstrap.css" type="text/css" rel="stylesheet">
+<link href="css/docs.css" type="text/css" rel="stylesheet">
+<link href="css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet">
+
+<link href="css/font-awesome.min.css" type="text/css" rel="stylesheet">
+<link href="css/index.css" type="text/css" rel="stylesheet"
+	media="all">
+<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/account.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/tb.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/sudyNav.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/UserInfo.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/index-min.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/global-min.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/tbindex.css" type="text/css" rel="stylesheet" media="all">
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -262,6 +283,94 @@
 		<div class="container">
 			<p>Copyright &copy; 2015.Company name All rights reserved.</p>
 		</div>
+	</div>
+	<div class="modal fade" id="modellog" tabindex="-1" role="dialog"
+		aria-labelledby="myModal" aria-hidden="true">
+
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<h2 class="modal-title" style="font-size: 24px;font-weight: 700;text-align: left;color: #34495e;">订单</h2>
+				<div class="row-fluid" style="padding: 0px;margin-left: 15px;margin-bottom: 20px;">
+					<div class="row-fluid" style="margin-top: 10px;">
+						<div class="col-lg-4" style="min-width: 80px;max-width: 200px;padding: 0px;">
+						<h1 style="border-bottom: 0px; color: #34495e;font-size:20px;">请确认订单信息：</h1>
+							<table style="border-bottom: 0px; color: #34495e;font-size:20px;">
+								<tr>
+									<td>书籍名称：</td>
+									<td id="order_name">name</td>
+								</tr>
+								<tr>
+									<td>单价：</td>
+									<td id="order_price">price</td>
+								</tr>
+								<tr>
+									<td>数量：</td>
+									<td id="order_counter">counter</td>
+								</tr>
+								<tr>
+									<td>总价：</td>
+									<td id="order_totalPrice">totalPrice</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+					<br/>
+					<br/>
+					<h1 style="border-bottom: 0px; color: #34495e;font-size:20px;">请填写收货信息：</h1>
+					<div class="row-fluid" style="margin-top: 10px;">
+						<div class="col-lg-4" style="min-width: 80px;max-width: 90px;padding: 0px;">
+							<h1 style="border-bottom: 0px; color: #34495e;font-size:15px;">姓名：</h1>
+						</div>
+						<div class="col-lg-3" style="padding: 0px;min-width: 299px;max-width: 299px;">
+							<input id="NAME" type="text" class="login-field" style="height: 33px;">
+						</div>
+						<div class="col-lg-3" style="margin-top: 5px;">
+							<a id="NAMEa" style="color: #E74C3C;visibility: hidden;" class="awarning">*姓名不能为空</a>
+						</div>
+					</div>
+					<div class="row-fluid" style="margin-top: 10px;">
+						<div class="col-lg-4" style="min-width: 80px;max-width: 90px;padding: 0px;">
+							<h1 style="border-bottom: 0px; color: #34495e;font-size:15px;">联系电话：</h1>
+						</div>
+						<div class="col-lg-3" style="padding: 0px;min-width: 299px;max-width: 299px;">
+							<input id="PHONE" type="text" class="login-field" style="height: 33px;">
+						</div>
+						<div class="col-lg-3" style="margin-top: 5px;">
+							<a id="PHONEa" style="color: #E74C3C;visibility: hidden;" class="awarning">*联系电话不能为空</a>
+						</div>
+					</div>
+					<div class="row-fluid" style="margin-top: 10px;">
+						<div class="col-lg-4" style="min-width: 80px;max-width: 90px;padding: 0px;">
+							<h1 style="border-bottom: 0px; color: #34495e;font-size:15px;">收货地址：</h1>
+						</div>
+						<div class="col-lg-3" style="padding: 0px;min-width: 299px;max-width: 299px;">
+							<input id="ADDRESS" type="text" class="login-field" style="height: 33px;">
+						</div>
+						<div class="col-lg-3" style="margin-top: 5px;">
+							<a id="ADDRESSa" style="color: #E74C3C;visibility: hidden;" class="awarning">*收货地址不能为空</a>
+						</div>
+					</div>
+					<div class="row-fluid" style="margin-top: 10px;">
+						<div class="col-lg-4" style="min-width: 80px;max-width: 90px;padding: 0px;">
+							<h1 style="border-bottom: 0px; color: #34495e;font-size:15px;">邮编：</h1>
+						</div>
+						<div class="col-lg-3" style="padding: 0px;min-width: 299px;max-width: 299px;">
+							<input id="ZIPCODE" type="text" class="login-field" style="height: 33px;">
+						</div>
+						<div class="col-lg-3" style="margin-top: 5px;">
+							<a id="ZIPCODEa" style="color: #E74C3C;visibility: hidden;" class="awarning">*邮编不能为空</a><br/>
+							<a id="ZIPCODEa2" style="color: #E74C3C;visibility: hidden;" class="awarning">*请正确写入邮编</a>
+						</div>
+					</div>
+					<div class="row-fluid" style="margin-top: 10px;">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+						<button type="button" class="btn btn-primary" onclick="submitOrder()">提交</button>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+		
 	</div>
 </body>
 <script type="text/javascript" src="js/checkout.js"></script>
