--- a/UserInfo.html
+++ b/UserInfo.html
@@ -96,17 +96,19 @@
 					</div>
 				</div>
 				<div class="header-right cart">
-					<a href="#" style="right: 100px; position: absolute;"><span
+					<a href="#" style="right: 100px; position: absolute;" onmouseover="allmoney()"><span
 						class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
 					<div class="cart-box" style="right: 75px; top: 54px;">
 						<h4>
-							<a href="checkout.html"> <span class="simpleCart_total">
-									$0.00 </span> (<span id="simpleCart_quantity"
+							<a href="checkout.html"> 
+							<span class="simpleCart_total"  id="allmoney">
+									¥0.00 
+							</span> (<span id="simpleCart_quantity"
 								class="simpleCart_quantity"> 0 </span>)
 							</a>
 						</h4>
 						<p>
-							<a href="javascript:;" class="simpleCart_empty">Empty cart</a>
+							<a href="javascript:;" class="simpleCart_empty" onclick="deleteAll()">Empty cart</a>
 						</p>
 						<div class="clearfix"></div>
 					</div>
@@ -372,7 +374,7 @@
 											style="text-align: center; vertical-align: top; padding-top: 10px; padding-bottom: 10px; border-right-width: 0; border-right-style: solid; border-right-color: #E8E8E8; border-top-width: 0; border-top-style: solid; border-top-color: #E8E8E8;"
 											data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2"><div
 												data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0">
-												<div data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0.0">1</div>
+												<div data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0.0" id="counter0">1</div>
 											</div></td>
 										
 										<td
@@ -660,7 +662,7 @@
 											style="text-align: center; vertical-align: top; padding-top: 10px; padding-bottom: 10px; border-right-width: 0; border-right-style: solid; border-right-color: #E8E8E8; border-top-width: 0; border-top-style: solid; border-top-color: #E8E8E8;"
 											data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2"><div
 												data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0">
-												<div data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0.0">1</div>
+												<div data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0.0" id="counter1">1</div>
 											</div></td>
 										
 										<td
@@ -949,7 +951,7 @@
 											style="text-align: center; vertical-align: top; padding-top: 10px; padding-bottom: 10px; border-right-width: 0; border-right-style: solid; border-right-color: #E8E8E8; border-top-width: 0; border-top-style: solid; border-top-color: #E8E8E8;"
 											data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2"><div
 												data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0">
-												<div data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0.0">1</div>
+												<div data-reactid=".0.3.2.$0.0.0.1.1.1:$0.2.0.0" id="counter2">1</div>
 											</div></td>
 										<td
 											style="text-align: center; vertical-align: top; padding-top: 10px; padding-bottom: 10px; border-right-width: 1px; border-right-style: solid; border-right-color: #E8E8E8; border-top-width: 0; border-top-style: solid; border-top-color: #E8E8E8;"
@@ -1234,5 +1236,6 @@
 	
 </body>
 <script type="text/javascript" src="js/Login.js"></script>
+<script type="text/javascript" src="js/deleteCart.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
 </html>
