--- a/account.html
+++ b/account.html
@@ -74,17 +74,19 @@
 					</div>
 				</div>
 				<div class="header-right cart">
-					<a href="#" style="right: 100px; position: absolute;"><span
+					<a href="#" style="right: 100px; position: absolute;" onmouseover="allmoney()"><span
 						class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
 					<div class="cart-box" style="right: 75px; top: 54px;">
 						<h4>
-							<a href="checkout.html"> <span class="simpleCart_total">
-									$0.00 </span> (<span id="simpleCart_quantity"
+							<a href="checkout.html"> 
+							<span class="simpleCart_total"  id="allmoney">
+									¥0.00 
+							</span> (<span id="simpleCart_quantity"
 								class="simpleCart_quantity"> 0 </span>)
 							</a>
 						</h4>
 						<p>
-							<a href="javascript:;" class="simpleCart_empty">Empty cart</a>
+							<a href="javascript:;" class="simpleCart_empty" onclick="deleteAll()">Empty cart</a>
 						</p>
 						<div class="clearfix"></div>
 					</div>
@@ -166,5 +168,6 @@
 	<script type="text/javascript" src="js/Register.js"></script>
 </body>
 <script type="text/javascript" src="js/Login.js"></script>
+<script type="text/javascript" src="js/deleteCart.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
 </html>
