--- a/checkout.html
+++ b/checkout.html
@@ -246,7 +246,7 @@
 		<table style="margin-right:30px;;margin-bottom: 30px;float: right;">
 			<tr>
 			<td style="text-align: center;">
-				<a href="#" class="btnCheckout btn-block" style="width: 150px;" onclick="check()">结算</a>					
+				<a href="#" class="btnCheckout btn-block" style="width: 150px;" onclick="submit()">结算</a>					
 			 </td>
 			</tr>
 		</table>
@@ -305,24 +305,16 @@
 					<div class="row-fluid" style="margin-top: 10px;">
 						<div class="col-lg-4" style="min-width: 80px;max-width: 200px;padding: 0px;">
 						<h1 style="border-bottom: 0px; color: #34495e;font-size:20px;">请确认订单信息：</h1>
-							<table style="border-bottom: 0px; color: #34495e;font-size:20px;">
-								<tr>
-									<td>书籍名称：</td>
-									<td id="order_name">name</td>
-								</tr>
-								<tr>
-									<td>单价：</td>
-									<td id="order_price">price</td>
-								</tr>
-								<tr>
-									<td>数量：</td>
-									<td id="order_counter">counter</td>
-								</tr>
+						<hr/>
+						<div id="tables">
+							<table id="tb" style="border-bottom: 0px; color: #34495e;font-size:20px;">
 								<tr>
 									<td>总价：</td>
-									<td id="order_totalPrice">totalPrice</td>
+									<td id="sum">counter</td>
 								</tr>
+								
 							</table>
+							</div>
 						</div>
 					</div>
 					<br/>
@@ -375,7 +367,7 @@
 					</div>
 					<div class="row-fluid" style="margin-top: 10px;">
 						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-						<button type="button" class="btn btn-primary" onclick="submitOrder()">提交</button>
+						<button type="button" class="btn btn-primary" onclick="confirm()">提交</button>
 					</div>
 				</div>
 			</div>
