--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <link href="css/account.css" type="text/css" rel="stylesheet"
 	media="all">
 <link href="css/index.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/IndexStyle.css" type="text/css" rel="stylesheet" media="all">
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -339,11 +340,15 @@
 				</form>
 			</div>
 		</div>
-		<div class="container">
-			<h2 class="hdng">
-				Yummy <span>Cakes</span> for u
-			</h2>
-			<p>Our best cakes make your day special</p>
+		<div class="container" style="margin: 0px;padding: 0px;width: 100%;">
+			<div id="focus" >
+			<ul>
+				<li><img src="images/book1.jpg" alt="jquery商城焦点图效果"></li>
+				<li><img src="images/book2.jpg" alt="jquery商城焦点图代码"></li>
+				<li><img src="images/book3.jpg" alt="jquery商城焦点图源码"></li>
+				<li><img src="images/book4.jpg" alt="jquery商城焦点图源码"></li>
+			</ul>
+
 		</div>
 	</div>
 	<!--//banner-->
@@ -378,4 +383,5 @@
 <script type="text/javascript" src="js/deleteCart.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
 <script type="text/javascript" src="js/Search.js"></script>
+<script type="text/javascript" src="js/indexRoll.js"></script>
 </html>
