--- a/index.html
+++ b/index.html
@@ -18,12 +18,25 @@
 </script>
 <!-- //Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
+<link href="css/docs.css" type="text/css" rel="stylesheet">
+<link href="css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet">
+
+<link href="css/font-awesome.min.css" type="text/css" rel="stylesheet">
+<link href="css/account.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/tb.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/sudyNav.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/UserInfo.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/index-min.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/global-min.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/tbindex.css" type="text/css" rel="stylesheet" media="all">
+
+
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-<link href="css/account.css" type="text/css" rel="stylesheet"
-	media="all">
+<link href="css/account.css" type="text/css" rel="stylesheet"media="all">
 <link href="css/index.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/IndexStyle.css" type="text/css" rel="stylesheet" media="all">
+
+
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -37,9 +50,9 @@
 <body>
 	<!--header-->
 	<div class="header" style="height: 55px;">
-		<div class="container">
-			<nav class="navbar navbar-default" role="navigation">
-				<div class="navbar-header">
+		<div class="container" style="height: 55px;">
+			<nav class="navbar navbar-default" role="navigation" style="height: 55px;">
+				<div class="navbar-header" >
 					<button type="button" class="navbar-toggle" data-toggle="collapse"
 						data-target="#bs-example-navbar-collapse-1">
 						<span class="sr-only">Toggle navigation</span> <span
@@ -52,11 +65,11 @@
 				</div>
 				<!--navbar-header-->
 				<div class="collapse navbar-collapse"
-					id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li><a href="index.html" class="active">首页</a></li>
+					id="bs-example-navbar-collapse-1" style="height: 55px;">
+					<ul class="nav navbar-nav" style="height: 55px;">
+						<li style="height: 55px;"><a href="index.html" class="active">首页</a></li>
 						
-						<li class="dropdown">
+						<li class="dropdown" style="height: 55px;">
 							<a href="#" class="dropdown-toggle"
 							data-toggle="dropdown">分类<b class="caret"></b></a>
 							<ul class="submenumy dropdown-menu multi-column columns-1">
@@ -250,7 +263,7 @@
 				</div>
 				<!--//navbar-header-->
 			</nav>
-			<div class="header-info">
+			<div class="header-info" style="height: 55px;">
 				<div class="header-right login">
 					<a href="#" id="user" style="right: 150px; position: absolute;"><span
 						class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
